--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,30 @@ files:
     destination: /home/ec2-user/
 
 hooks:
-  AfterInstall:
-    - location: scripts/install_and_deploy_tomcat.sh
+  ApplicationStop:
+    - location: scripts/stop_tomcat.sh
+      timeout: 60
+      runas: ec2-user
+
+  BeforeInstall:
+    - location: scripts/install_tomcat.sh
       timeout: 600
+      runas: ec2-user
+
+  AfterInstall:
+    - location: scripts/configure_tomcat.sh
+      timeout: 300
+      runas: ec2-user
+    - location: scripts/deploy_war.sh
+      timeout: 300
+      runas: ec2-user
+
+  ApplicationStart:
+    - location: scripts/start_tomcat.sh
+      timeout: 120
+      runas: ec2-user
+
+  ValidateService:
+    - location: scripts/validate.sh
+      timeout: 60
       runas: ec2-user
