--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,6 @@ phases:
       - echo "Building the WAR file..."
       - mvn clean package -DskipTests
       - echo "Copying WAR to artifact root..."
-      # Copy WAR to root so appspec.yml is simple
       - cp target/Ecomm.war .
 
   post_build:
@@ -28,7 +27,9 @@ phases:
 
 artifacts:
   files:
-    - Ecomm.war               
-    - appspec.yml
-    - scripts/*
-    - tomcat-users.xml
+    - Ecomm.war               # WAR at root
+    - appspec.yml             # must be at root for CodeDeploy
+    - tomcat-users.xml        # custom tomcat-users.xml
+    - scripts/*               # deployment scripts
+  name: EcommArtifact         # final artifact will be EcommArtifact.zip
+  discard-paths: yes          # avoids nested folders inside zip
