--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,13 +1,13 @@
 name: deploy EcomApp
 on:
   push:
-    branches: ["master"]
+    branches: [ "master" ]
 jobs:
    build:
      runs-on: ubuntu-latest
      steps:
      - uses: actions/checkout@v4 
-     - name: setup jdk 17
+     - name: Setup jdk 17
      - uses: actions/setup-java@v4
        with:
           java-version: '17'
