--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,15 +3,17 @@ on:
   push:
     branches: [ "master" ]
 jobs:
-   build:
-     runs-on: ubuntu-latest
-     steps:
-     - uses: actions/checkout@v4 
-     - name: Setup jdk 17
-     - uses: actions/setup-java@v4
-       with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-     - name: Build with maven
-       run: mvn -B package --file pom.xml
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: depoly ecomm to tomcatserver-running inside ec2
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.232.212.160:8080/manager/text/depoly?path=/Ecomm.war
