--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -7,7 +7,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v4
-      - name: Setup jdk 17
+      - name: Setup JDK 17
       - uses: actions/setup-java@v4
         with:
            java-version: '17'
