--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,14 +1,21 @@
 name: Ecomm deploy
+
 on: 
   push:
-    branches: ["master"]
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+    
 jobs:
    build:
+   
       runs-on: ubuntu-latest
+      
       steps:
+    
       - uses: actions/checkout@v4
-      - name: Setup JDK 17
-      - uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
            java-version: '17'
            distribution: 'temurin'
