--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,4 +1,4 @@
-name: Ecomm deploy
+name: ecomm deploy
 
 on: 
   push:
@@ -23,4 +23,4 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: deploy to tomcat
-        run: curl -V -U admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.232.212.160:8080/manager/text/depoly?path=/Ecomm.war'
+        run: curl -V -U admin:admin -T /home/runner/work/etoe/etoe/target/ecomm.war 'http://13.232.212.160:8080/manager/text/depoly?path=/ecomm.war'
